@@ -270,6 +270,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Message name filter on Special:Allmessages now case-insensitive
 * (bug 13943) Fix image redirect behaviour on image pages
 * (bug 14093) Do 'sysop' => 'protect' magic in Title::isValidMoveOperation
+* (bug 14063) Power search form missing <label> for redirects check
 
 === API changes in 1.13 ===
 
